fixed navbar margin on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,7 @@ body {
   text-decoration: none;
   font-size: 1.2rem;
   text-transform: uppercase;
+  letter-spacing: 0.1rem;
   opacity: 0;
   transition: opacity 150ms ease-in-out;
   background-color: #ffffff;
@@ -178,7 +179,6 @@ body {
 }
 .style-cart:hover {
   color: var(--main-cool-blue-color);
-  padding: 0.6rem;
   transition: 250ms ease-in-out 250ms;
 }
 
@@ -469,17 +469,6 @@ body {
  *                           *
  *************************** */
 
-.user-login {
-  margin-left: 3rem !important;
-}
-.user-login i {
-  margin-left: 0.7rem !important;
-  color: var(--main-vivid-color);
-}
-
-.user-login span {
-  margin-left: 0.7rem !important;
-}
 .user-email-format span {
   color: var(--main-vivid-color);
   text-transform: lowercase;
@@ -491,9 +480,18 @@ body {
   width: 13.5vw;
   display: block;
 }
+#user-logout {
+  background-color: var(--main-cool-green-color);
+  border: 1px solid var(--main-cool-green-color);
+  color: white;
+  padding: 0.5rem;
+  font-size: 0.8rem;
+  letter-spacing: 0.1rem;
+  transition: 0.4s;
+}
 
-#user-logout,
-#user-signup {
+#user-signup,
+#user-logIn {
   background-color: var(--main-vivid-color);
   border: 1px solid var(--main-vivid-color);
   color: white;
@@ -504,7 +502,8 @@ body {
 }
 
 #user-logout:hover,
-#user-signup:hover {
+#user-signup:hover,
+#user-logIn:hover {
   cursor: pointer;
   color: var(--main-cool-blue-color);
   border: 1px solid var(--main-cool-blue-color);
@@ -1187,7 +1186,6 @@ h3 {
 }
 .icon-item-info h3 {
   color: #3c4858;
-
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 2px;
